--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^6.11.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/morgan": "^1.9.10",
+    "apollo-angular": "^11.0.0",
     "better-auth": "^1.2.12",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
@@ -42,7 +43,9 @@
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
