--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,10 @@
     "outDir": "./out-tsc/app",
     "types": [
       "node"
-    ]
+    ],
+    "lib": ["es2022", "dom", "esnext.asynciterable"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts"
