--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prisma": "^6.11.1",
     "typescript": "~5.8.2"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
