--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.5",
+    "@apollo/client": "^3.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/morgan": "^1.9.10",
     "apollo-angular": "^11.0.0",
@@ -36,14 +37,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
+    "graphql": "^16",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
-    "tslib": "^2.3.0",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
