--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.5",
     "@apollo/client": "^3.0.0",
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/morgan": "^1.9.10",
     "apollo-angular": "^11.0.0",
@@ -39,6 +40,7 @@
     "express": "^5.1.0",
     "graphql": "^16",
     "helmet": "^8.1.0",
+    "lucide-angular": "^0.543.0",
     "morgan": "^1.10.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
