--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "helmet": "^8.1.0",
     "lucide-angular": "^0.543.0",
     "morgan": "^1.10.1",
+    "ngx-infinite-scroll": "^20.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
