--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
               }
             ],
             "styles": [
+              "node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
@@ -110,8 +111,10 @@
                 "glob": "**/*",
                 "input": "public"
               }
+              }
             ],
             "styles": [
+              "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ]
           }
