--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.5",
     "@apollo/client": "^3.0.0",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/morgan": "^1.9.10",
@@ -41,10 +40,11 @@
     "express": "^5.1.0",
     "graphql": "^16",
     "helmet": "^8.1.0",
-    "leaflet": "^1.9.4",
     "lucide-angular": "^0.543.0",
+    "mapbox-gl": "^3.15.0",
     "morgan": "^1.10.1",
     "ngx-infinite-scroll": "^20.0.0",
+    "ngx-mapbox-gl": "^13.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
@@ -56,7 +56,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
-    "@types/leaflet": "^1.9.20",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
