--- a/angular.json
+++ b/angular.json
@@ -79,6 +79,27 @@
                 }
               ]
             },
+            "staging": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "4mb",
+                  "maximumError": "6MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ]
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
@@ -91,6 +112,9 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
+              "buildTarget": "ngxpress:build:production"
+            },
+            "staging": {
               "buildTarget": "ngxpress:build:production"
             },
             "development": {
