--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
+
+      "@environments/*": [
+        "environments/*"
+      ],
       "@components/*": [
         "app/components/*"
       ],
