--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,7 @@
             ],
             "styles": [
               "node_modules/mapbox-gl/dist/mapbox-gl.css",
+              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
@@ -139,6 +140,7 @@
             ],
             "styles": [
               "node_modules/mapbox-gl/dist/mapbox-gl.css",
+              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.scss"
             ]
           }
