fixed layouts; adminlayout; added tenanat table

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@nhost/nhost-js": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/angular-table": "^8.21.3",
     "@types/morgan": "^1.9.10",
     "apollo-angular": "^11.0.0",
-    "better-auth": "^1.2.12",
     "cors": "^2.8.5",
     "devextreme": "^25.1.5",
     "devextreme-angular": "^25.1.5",
