--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "app/pages/*"
       ],
       "@services/*": [
-        "app/services/*"
+        "app/core/services/*"
       ],
     },
     "strict": true,
