fixed tenant edit form with ngx-formly

--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,8 @@
             "styles": [
               "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "node_modules/devextreme/dist/css/dx.light.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
@@ -136,12 +138,8 @@
                 "glob": "**/*",
                 "input": "public"
               }
-              }
             ],
             "styles": [
-              "node_modules/mapbox-gl/dist/mapbox-gl.css",
-              "node_modules/devextreme/dist/css/dx.common.css",
-              "node_modules/devextreme/dist/css/dx.light.css",
               "src/styles.scss"
             ]
           }
