--- a/package.json
+++ b/package.json
@@ -21,21 +21,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-server": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "@angular/ssr": "^20.0.5",
+    "@angular/animations": "^20.3.0",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-server": "^20.3.0",
+    "@angular/router": "^20.3.0",
+    "@angular/ssr": "^20.3.1",
     "@apollo/client": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@ngx-formly/bootstrap": "^7.0.0",
+    "@ngx-formly/core": "^7.0.0",
+    "@ngx-formly/schematics": "^7.0.0",
     "@nhost/nhost-js": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/angular-table": "^8.21.3",
     "@types/morgan": "^1.9.10",
     "apollo-angular": "^11.0.0",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
     "devextreme": "^25.1.5",
     "devextreme-angular": "^25.1.5",
@@ -49,15 +54,16 @@
     "morgan": "^1.10.1",
     "ngx-infinite-scroll": "^20.0.0",
     "ngx-mapbox-gl": "^13.0.0",
+    "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.5",
-    "@angular/cli": "^20.0.5",
-    "@angular/compiler-cli": "^20.0.0",
+    "@angular/build": "^20.3.1",
+    "@angular/cli": "^20.3.1",
+    "@angular/compiler-cli": "^20.3.0",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
     "@types/mapbox-gl": "^3.4.1",
