--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-angular": "^0.543.0",
     "mapbox-gl": "^3.15.0",
     "morgan": "^1.10.1",
+    "ngx-device-detector": "^10.1.0",
     "ngx-infinite-scroll": "^20.0.0",
     "ngx-mapbox-gl": "^13.0.0",
     "ngx-toastr": "^19.1.0",
