fixed vite product build issue for glmaps

--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "mapbox-gl-csp-worker.js",
+                "input": "node_modules/mapbox-gl/dist/",
+                "output": "./"
               }
             ],
             "styles": [
